// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders a Select 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <label
    className="MuiFormLabel-root-10 MuiFormLabel-filled-14 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9 MuiInputLabel-shrink-8"
    data-shrink={true}
    htmlFor="nodejs"
  />
  <div
    className="MuiInput-root-22 MuiInput-formControl-23 MuiInput-underline-26"
  >
    <div
      className="MuiSelect-root-17"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-18 MuiSelect-selectMenu-19 MuiInput-input-30"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </div>
      <input
        name="myText"
        type="hidden"
        value="Foo"
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-35 MuiSelect-icon-21"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-46 MuiFormHelperText-filled-51"
  />
</div>
`;

exports[`Select renders a Select with a warning 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <label
    className="MuiFormLabel-root-10 MuiFormLabel-filled-14 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9 MuiInputLabel-shrink-8"
    data-shrink={true}
    htmlFor="nodejs"
  />
  <div
    className="MuiInput-root-22 MuiInput-formControl-23 MuiInput-underline-26"
  >
    <div
      className="MuiSelect-root-17"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-18 MuiSelect-selectMenu-19 MuiInput-input-30"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </div>
      <input
        name="myText"
        type="hidden"
        value="Foo"
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-35 MuiSelect-icon-21"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-46 MuiFormHelperText-filled-51"
  >
    FooWarning
  </p>
</div>
`;

exports[`Select renders a Select with an error 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <label
    className="MuiFormLabel-root-10 MuiFormLabel-error-13 MuiFormLabel-filled-14 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9 MuiInputLabel-shrink-8"
    data-shrink={true}
    htmlFor="nodejs"
  />
  <div
    className="MuiInput-root-22 MuiInput-error-27 MuiInput-formControl-23 MuiInput-underline-26"
  >
    <div
      className="MuiSelect-root-17"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-18 MuiSelect-selectMenu-19 MuiInput-input-30"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </div>
      <input
        name="myText"
        type="hidden"
        value="Foo"
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-35 MuiSelect-icon-21"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-46 MuiFormHelperText-error-47 MuiFormHelperText-filled-51"
  >
    FooError
  </p>
</div>
`;

exports[`Select renders a Select with multiple 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <label
    className="MuiFormLabel-root-10 MuiFormLabel-filled-14 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9 MuiInputLabel-shrink-8"
    data-shrink={true}
    htmlFor="nodejs"
  />
  <div
    className="MuiInput-root-22 MuiInput-formControl-23 MuiInput-underline-26"
  >
    <div
      className="MuiSelect-root-17"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-18 MuiSelect-selectMenu-19 MuiInput-input-30"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </div>
      <input
        name="myText"
        type="hidden"
        value="Foo,Bar"
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-35 MuiSelect-icon-21"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-46 MuiFormHelperText-filled-51"
  />
</div>
`;

exports[`Select renders a Select with no error when not touched 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <label
    className="MuiFormLabel-root-10 MuiFormLabel-filled-14 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9 MuiInputLabel-shrink-8"
    data-shrink={true}
    htmlFor="nodejs"
  />
  <div
    className="MuiInput-root-22 MuiInput-formControl-23 MuiInput-underline-26"
  >
    <div
      className="MuiSelect-root-17"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-18 MuiSelect-selectMenu-19 MuiInput-input-30"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </div>
      <input
        name="myText"
        type="hidden"
        value="Foo"
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-35 MuiSelect-icon-21"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-46 MuiFormHelperText-filled-51"
  />
</div>
`;

exports[`Select renders a Select with no warning when not touched 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <label
    className="MuiFormLabel-root-10 MuiFormLabel-filled-14 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9 MuiInputLabel-shrink-8"
    data-shrink={true}
    htmlFor="nodejs"
  />
  <div
    className="MuiInput-root-22 MuiInput-formControl-23 MuiInput-underline-26"
  >
    <div
      className="MuiSelect-root-17"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-18 MuiSelect-selectMenu-19 MuiInput-input-30"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </div>
      <input
        name="myText"
        type="hidden"
        value="Foo"
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-35 MuiSelect-icon-21"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-46 MuiFormHelperText-filled-51"
  />
</div>
`;

exports[`Select should ignore defaultValue 1`] = `
<div
  className="MuiFormControl-root-1"
>
  <label
    className="MuiFormLabel-root-10 MuiFormLabel-filled-14 MuiInputLabel-root-5 MuiInputLabel-formControl-6 MuiInputLabel-animated-9 MuiInputLabel-shrink-8"
    data-shrink={true}
    htmlFor="nodejs"
  />
  <div
    className="MuiInput-root-22 MuiInput-formControl-23 MuiInput-underline-26"
  >
    <div
      className="MuiSelect-root-17"
    >
      <div
        aria-haspopup="true"
        aria-owns={null}
        aria-pressed="false"
        className="MuiSelect-select-18 MuiSelect-selectMenu-19 MuiInput-input-30"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </div>
      <input
        name="myText"
        type="hidden"
        value="Foo"
      />
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root-35 MuiSelect-icon-21"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M7 10l5 5 5-5z"
        />
      </svg>
    </div>
  </div>
  <p
    className="MuiFormHelperText-root-46 MuiFormHelperText-filled-51"
  />
</div>
`;
